--- a/FRONT/views/accueil.ejs
+++ b/FRONT/views/accueil.ejs
@@ -43,7 +43,17 @@
                             <h4 class="card-title"><%= product.libelle %></h4>
                             <p class="card-text"><%= product.price %> €</p>
                             <p class="card-text"><%= product.category %></p>
+                            <p class="card-text"><%= product.description %></p>
                             <button type="button" class="btn btn-primary" onclick="window.location.href='/ajouterAuPanier/<%= product.id %>'">Ajouter au panier</button>
+                            <form action="/modifProduit" method="post">
+                                <input type="hidden" name="id" value="<%= product.id %>">
+                                <input type="hidden" name="libelle" value="<%= product.libelle %>">
+                                <input type="hidden" name="description" value="<%= product.description %>">
+                                <input type="hidden" name="images" value="<%= product.images %>">
+                                <input type="hidden" name="price" value="<%= product.price %>">
+                                <input type="hidden" name="category" value="<%= product.category %>">
+                                <input type="submit" class="btn btn-warning" value="Modifier le produit">
+                            </form>
                         </div>
                     </div>
                 </div>
