--- a/FRONT/views/index.ejs
+++ b/FRONT/views/index.ejs
@@ -9,7 +9,18 @@
 </head>
 <body>
 
-    <%= include('accueil') %>
+    <!-- PAGE
+    inscription
+    accueil
+    dashboard
+    connexion
+    statisique
+    product
+    -->
+
+<%= include('test') %>
+    
+
  
 </body>
 </html>
