--- a/FRONT/views/accueil.ejs
+++ b/FRONT/views/accueil.ejs
@@ -55,19 +55,10 @@
                     <div class="card">
                         <div class="card-body">
                             <h4 class="card-title" ><%= product.libelle %></h4>
-                            <!-- sencé être un carrousel -->
                             <% let images = product.images.split(',') %>
-                            <% console.log(images[0]) %>
-                            
-                            <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-                                <div class="carousel-inner">
-                                    <div class="carousel-item active">
-                                        <img src="<%= images[0]%>" class="d-block w-100" alt="<%= product.libelle %>"  width="500">
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img src="<%= images[1]%>" class="d-block w-100" alt="<%= product.libelle %>"  width="500">
-                                    </div>
-                                </div>
+                            <div>
+                                <img src="<%= images[0]%>" class="d-block w-100" alt="<%= product.libelle %>"  width="300">
+                                <img src="<%= images[1]%>" class="d-block w-100" alt="<%= product.libelle %>"  width="300">
                             </div>
                             <p class="card-text" ><%= product.price %> €</p>
                             <p class="card-text" ><%= product.category %></p>
